# FlowVidPC

./: .env.example  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.mjs  generate-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/mpv/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: AudioTrackSelector.css  AudioTrackSelector.tsx  ContinueWatching.css  ContinueWatching.tsx  EmbeddedMpvPlayer.css  EmbeddedMpvPlayer.tsx  ForYouRow.css  ForYouRow.tsx  FriendsActivityPanel.css  FriendsActivityPanel.tsx  FriendsPanel.css  FriendsPanel.tsx  HeroBanner.css  HeroBanner.tsx  Icons.tsx  Layout.css  Layout.tsx  MediaCard.css  MediaCard.tsx  MediaRow.css  MediaRow.tsx  PersonModal.css  PersonModal.tsx  SourceSelectPopup.css  SourceSelectPopup.tsx  SubtitleSelector.css  SubtitleSelector.tsx  ToastContainer.css  ToastContainer.tsx  UpdateModal.css  UpdateModal.tsx  UpgradePrompt.css  UpgradePrompt.tsx  WatchPartyOverlay.css  WatchPartyOverlay.tsx  WatchPartySetupModal.css  WatchPartySetupModal.tsx  index.ts
src/hooks/: useFeatureGate.ts  useUpdateChecker.ts
src/pages/: AddonsPage.css  AddonsPage.tsx  BrowsePage.css  BrowsePage.tsx  CalendarPage.css  CalendarPage.tsx  DetailsPage.css  DetailsPage.tsx  DiscoverPage.css  DiscoverPage.tsx  FriendsPage.css  FriendsPage.tsx  HomePage.css  HomePage.tsx  LibraryPage.css  LibraryPage.tsx  LoginPage.css  LoginPage.tsx  (+11 more)
(+25 files in other folders)
