[package]
name = "flowvid"
version = "1.0.1"
description = "FlowVid Desktop - Cross-platform streaming app"
authors = ["FlowVid"]
edition = "2021"

[lib]
name = "flowvid_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-libmpv = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
